k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simpleapp
  template:
    metadata:
      labels:
        app: simpleapp
    spec:
      containers:
      - name: simpleapp
        image: edge31acr.azurecr.io/venkatasimpleapp:39
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: edge31acr
