k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simpleapp-service
spec:
  selector:
    app: simpleapp
  ports:
  - port: 80
    targetPort: 8080
